[package]
name = "villa-prgic-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
ical = "0.11.0"
icalendar = "0.16.13"
reqwest = "0.12.15"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = {version = "1.44.1", features = ["full"]}
tower-http = {version = "0.6.2", features = ["cors"]}
tracing = "0.1.41"
tracing-subscriber = "0.3"
